<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/tool_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/toolbar_color"
        android:padding="11dp">

        <ImageButton
            android:id="@+id/btn_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="11dp"
            android:background="@android:color/transparent"
            android:src="@drawable/ic_arrow_back_white_24dp" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/btn_back"
            android:background="@drawable/bricks_focused">

            <com.nownews.mobile.Widget.CustomAutoCompleteTextView
                android:id="@+id/search_edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:completionThreshold="1"
                android:hint="@string/search_hint"
                android:imeOptions="actionSearch"
                android:padding="5dp"
                android:singleLine="true"
                android:textColor="@android:color/white"
                android:textColorHint="@android:color/darker_gray"
                android:textSize="20dp" />

            <ImageButton
                android:id="@+id/btn_clear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:background="@android:color/transparent"
                android:src="@drawable/ic_close_white_24dp" />
        </FrameLayout>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/search_history_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/tool_bar"
        android:gravity="center">

        <TextView
            android:id="@+id/search_history_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:padding="2dp"
            android:text="@string/search_history"
            android:textSize="20dp" />

        <ListView
            android:id="@+id/search_history"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/search_history_title" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/loading_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center">

        <ProgressBar
            android:id="@+id/image_progressbar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true" />

        <TextView
            android:id="@+id/image_loading_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/image_progressbar"
            android:text="@string/search_loading"
            android:textColor="@android:color/black"
            android:textSize="15dp" />

        <TextView
            android:id="@+id/image_loading_keywords"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="5dp"
            android:layout_toRightOf="@+id/image_loading_txt"
            android:textColor="@android:color/black"
            android:textSize="25dp" />
    </RelativeLayout>

    <TextView
        android:id="@+id/hint"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/tool_bar"
        android:gravity="center"
        android:visibility="gone" />

    <android.support.v4.widget.SwipeRefreshLayout
        android:id="@+id/swipeRefreshLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/tool_bar">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/tool_bar"
            android:descendantFocusability="blocksDescendants" />
    </android.support.v4.widget.SwipeRefreshLayout>
</RelativeLayout>